--- a/README.textile
+++ b/README.textile
@@ -15,7 +15,7 @@ You can download an archive containing this plugin "HERE":https://github.com/cgr
 h2. Usage
 
 After enabling the plugin in the mantis management section you will find a new menu item named "S/Mime Configuration".
-You are then able to select a user and upload a base64 encoded certificate file. Every e-mail outgoing e-mail notification will be encrypted after this step is complete.
+You may select a user and upload a base64 encoded certificate file(*.pem). Every outgoing e-mail notification will be encrypted after this step is complete.
 Theres also the option to send a test e-mail to the user.
 
 h2. Known Problems
